# Chess

./: .gitignore  board.cpp  board.h  chess_gui.cpp  figures.h  main.cpp  save.fen
Chess-main/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Menu.cpp  Menu.h  PieceRenderer.cpp  PieceRenderer.h  SoundManager.cpp  SoundManager.h  Task.h  TaskBoard.cpp  TaskBoard.h  TaskManager.cpp  TaskManager.h  ai.cpp  ai.h  board.cpp  board.h  fen.cpp  fen.h  figures.h  main.cpp  main_gui.cpp
Chess-main1/: CMakeLists.txt  CMakePresets.json  figures.cpp
